crates/api/tests/snapshots/wire_snapshots__namespace_suggestion_dto.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "NamespaceSuggestionDto { namespace: \"character\".into(), tag_count: 40 }"
---
{
  "namespace": "character",
  "tag_count": 40
}
