crates/api/tests/snapshots/wire_snapshots__parent_dto.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "ParentDto { child: \"character:samus\".into(), parent: \"series:metroid\".into() }"
---
{
  "child": "character:samus",
  "parent": "series:metroid"
}
