crates/api/tests/snapshots/wire_snapshots__relation_pull_req.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "RelationPullReq { name: \"ptr\".into() }"
---
{
  "name": "ptr"
}
