crates/api/tests/snapshots/wire_snapshots__relation_pull_summary.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "RelationPullSummary { siblings: 3, parents: 2 }"
---
{
  "siblings": 3,
  "parents": 2
}
